tests/ui/parser/integer-literal-start-ident.rs
fn 1main() {}
//~^ ERROR expected identifier, found `1main`
